--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
+    <ClInclude Include="src\core\input\inputmanager.h" />
     <ClInclude Include="src\core\nativeapp.h" />
     <ClInclude Include="src\core\resource\resource.h" />
     <ClInclude Include="src\core\resource\resourcemanager.h" />
@@ -56,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\core\input\inputmanager.cpp" />
     <ClCompile Include="src\core\nativeapp.cpp" />
     <ClCompile Include="src\core\resource\resource.cpp" />
     <ClCompile Include="src\core\resource\resourcebinary.cpp" />
