--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClCompile Include="src\core\resource\resourcefont.cpp" />
     <ClCompile Include="src\core\resource\resourcetext.cpp" />
     <ClCompile Include="src\graphics\font\fontdata.cpp" />
+    <ClCompile Include="src\core\input\inputmanager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
@@ -59,6 +60,7 @@
     <ClInclude Include="src\graphics\texture\texture.h" />
     <ClInclude Include="src\core\resource\resourcemanager.h" />
     <ClInclude Include="src\core\resource\resource.h" />
+    <ClInclude Include="src\core\input\inputmanager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\graphics\shaders\renderer2.fs" />
