--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -77,6 +77,7 @@
     <ClCompile Include="src\graphics\font\font.cpp" />
     <ClCompile Include="src\graphics\font\fontatlas.cpp" />
     <ClCompile Include="src\graphics\font\fontmanager.cpp" />
+    <ClCompile Include="src\graphics\shaders\shaderfactory.cpp" />
     <ClCompile Include="src\graphics\texture\texture.cpp" />
     <ClCompile Include="src\graphics\texture\texture2d.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
