--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="src\core\nativeapp.h" />
     <ClInclude Include="src\core\resource\resource.h" />
     <ClInclude Include="src\core\resource\resourcemanager.h" />
+    <ClInclude Include="src\core\rtti.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
     <ClInclude Include="src\graphics\renderers\batchrenderer.h" />
