--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\graphics\font\fontdata.cpp" />
     <ClCompile Include="src\core\input\inputmanager.cpp" />
     <ClCompile Include="src\graphics\shaders\shaderfactory.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uibutton.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uiitem.cpp" />
+    <ClCompile Include="src\core\ui\uimanager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
@@ -63,6 +66,9 @@
     <ClInclude Include="src\core\resource\resource.h" />
     <ClInclude Include="src\core\input\inputmanager.h" />
     <ClInclude Include="src\core\rtti.h" />
+    <ClInclude Include="src\graphics\uiitem\uibutton.h" />
+    <ClInclude Include="src\graphics\uiitem\uiitem.h" />
+    <ClInclude Include="src\core\ui\uimanager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\graphics\shaders\renderer2.fs" />
