--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="src\graphics\texture\texture.h" />
     <ClInclude Include="src\graphics\uiitem\uibutton.h" />
     <ClInclude Include="src\graphics\uiitem\uiitem.h" />
+    <ClInclude Include="src\graphics\uiitem\uilabel.h" />
     <ClInclude Include="src\maths\mat4.h" />
     <ClInclude Include="src\maths\math.h" />
     <ClInclude Include="src\maths\mathcommon.h" />
