--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
+    <ClInclude Include="src\audio\audio.h" />
     <ClInclude Include="src\audio\audiomanager.h" />
     <ClInclude Include="src\core\input\inputmanager.h" />
     <ClInclude Include="src\core\nativeapp.h" />
@@ -59,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\audio\audio.cpp" />
     <ClCompile Include="src\audio\audiomanager.cpp" />
     <ClCompile Include="src\core\input\inputmanager.cpp" />
     <ClCompile Include="src\core\nativeapp.cpp" />
