--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -2,17 +2,35 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
+    <ClCompile Include="src\audio\audio.cpp" />
+    <ClCompile Include="src\audio\audiomanager.cpp" />
+    <ClCompile Include="src\core\input\inputmanager.cpp" />
     <ClCompile Include="src\core\nativeapp.cpp" />
+    <ClCompile Include="src\core\resource\resource.cpp" />
+    <ClCompile Include="src\core\resource\resourcebinary.cpp" />
+    <ClCompile Include="src\core\resource\resourcefont.cpp" />
+    <ClCompile Include="src\core\resource\resourcemanager.cpp" />
+    <ClCompile Include="src\core\resource\resourceshader.cpp" />
+    <ClCompile Include="src\core\resource\resourcetext.cpp" />
+    <ClCompile Include="src\core\resource\resourcetexture.cpp" />
+    <ClCompile Include="src\core\ui\uimanager.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexarray.cpp" />
+    <ClCompile Include="src\graphics\font\fontdata.cpp" />
     <ClCompile Include="src\graphics\renderers\renderer.cpp" />
+    <ClCompile Include="src\graphics\renderers\renderer2.cpp" />
+    <ClCompile Include="src\graphics\renderers\renderer3.cpp" />
     <ClCompile Include="src\graphics\shaders\shader.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexbuffer.cpp" />
     <ClCompile Include="src\graphics\font\font.cpp" />
     <ClCompile Include="src\graphics\font\fontatlas.cpp" />
     <ClCompile Include="src\graphics\font\fontmanager.cpp" />
+    <ClCompile Include="src\graphics\shaders\shaderfactory.cpp" />
     <ClCompile Include="src\graphics\texture\texture.cpp" />
     <ClCompile Include="src\graphics\texture\texture2d.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uibutton.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uiitem.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uilabel.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
     <ClCompile Include="src\maths\vec2.cpp" />
     <ClCompile Include="src\maths\vec3.cpp" />
@@ -21,28 +39,19 @@
     <ClCompile Include="src\utils\memory\memoryallocator.cpp" />
     <ClCompile Include="src\utils\string.cpp" />
     <ClCompile Include="src\utils\utils.cpp" />
-    <ClCompile Include="src\graphics\renderers\renderer2.cpp" />
-    <ClCompile Include="src\graphics\renderers\renderer3.cpp" />
-    <ClCompile Include="src\core\resource\resource.cpp" />
-    <ClCompile Include="src\core\resource\resourcemanager.cpp" />
-    <ClCompile Include="src\core\resource\resourcebinary.cpp" />
-    <ClCompile Include="src\core\resource\resourceshader.cpp" />
-    <ClCompile Include="src\core\resource\resourcetexture.cpp" />
-    <ClCompile Include="src\core\resource\resourcefont.cpp" />
-    <ClCompile Include="src\core\resource\resourcetext.cpp" />
-    <ClCompile Include="src\graphics\font\fontdata.cpp" />
-    <ClCompile Include="src\core\input\inputmanager.cpp" />
-    <ClCompile Include="src\graphics\shaders\shaderfactory.cpp" />
-    <ClCompile Include="src\audio\audiomanager.cpp" />
-    <ClCompile Include="src\audio\audio.cpp" />
-    <ClCompile Include="src\graphics\uiitem\uibutton.cpp" />
-    <ClCompile Include="src\graphics\uiitem\uiitem.cpp" />
-    <ClCompile Include="src\core\ui\uimanager.cpp" />
-    <ClCompile Include="src\graphics\uiitem\uilabel.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uiimage.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
+    <ClInclude Include="src\audio\audio.h" />
+    <ClInclude Include="src\audio\audiomanager.h" />
+    <ClInclude Include="src\audio\audioplaylist.h" />
+    <ClInclude Include="src\core\input\inputmanager.h" />
     <ClInclude Include="src\core\nativeapp.h" />
+    <ClInclude Include="src\core\resource\resource.h" />
+    <ClInclude Include="src\core\resource\resourcemanager.h" />
+    <ClInclude Include="src\core\rtti.h" />
+    <ClInclude Include="src\core\ui\uimanager.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
     <ClInclude Include="src\graphics\renderers\batchrenderer.h" />
@@ -50,6 +59,10 @@
     <ClInclude Include="src\graphics\shaders\shader.h" />
     <ClInclude Include="src\graphics\buffers\vertexbuffer.h" />
     <ClInclude Include="src\graphics\font\font.h" />
+    <ClInclude Include="src\graphics\texture\texture.h" />
+    <ClInclude Include="src\graphics\uiitem\uibutton.h" />
+    <ClInclude Include="src\graphics\uiitem\uiitem.h" />
+    <ClInclude Include="src\graphics\uiitem\uilabel.h" />
     <ClInclude Include="src\maths\mat4.h" />
     <ClInclude Include="src\maths\math.h" />
     <ClInclude Include="src\maths\mathcommon.h" />
@@ -64,18 +77,7 @@
     <ClInclude Include="src\utils\memory\memoryallocator.h" />
     <ClInclude Include="src\utils\string.h" />
     <ClInclude Include="src\utils\utils.h" />
-    <ClInclude Include="src\graphics\texture\texture.h" />
-    <ClInclude Include="src\core\resource\resourcemanager.h" />
-    <ClInclude Include="src\core\resource\resource.h" />
-    <ClInclude Include="src\core\input\inputmanager.h" />
-    <ClInclude Include="src\core\rtti.h" />
-    <ClInclude Include="src\audio\audiomanager.h" />
-    <ClInclude Include="src\audio\audio.h" />
-    <ClInclude Include="src\audio\audioplaylist.h" />
-    <ClInclude Include="src\graphics\uiitem\uibutton.h" />
-    <ClInclude Include="src\graphics\uiitem\uiitem.h" />
-    <ClInclude Include="src\core\ui\uimanager.h" />
-    <ClInclude Include="src\graphics\uiitem\uilabel.h" />
+    <ClInclude Include="src\graphics\uiitem\uiimage.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\graphics\shaders\renderer2.fs" />
