--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -49,6 +49,7 @@
     <ClInclude Include="src\graphics\uiitem\uiimage.h" />
     <ClInclude Include="src\graphics\uiitem\uiitem.h" />
     <ClInclude Include="src\graphics\uiitem\uilabel.h" />
+    <ClInclude Include="src\graphics\uiitem\uiprogressbar.h" />
     <ClInclude Include="src\maths\mat4.h" />
     <ClInclude Include="src\maths\math.h" />
     <ClInclude Include="src\maths\mathcommon.h" />
@@ -96,6 +97,7 @@
     <ClCompile Include="src\graphics\uiitem\uiimage.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiitem.cpp" />
     <ClCompile Include="src\graphics\uiitem\uilabel.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uiprogressbar.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
     <ClCompile Include="src\maths\vec2.cpp" />
     <ClCompile Include="src\maths\vec3.cpp" />
