--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -40,6 +40,7 @@
     <ClCompile Include="src\utils\string.cpp" />
     <ClCompile Include="src\utils\utils.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiimage.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uiprogressbar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
@@ -78,6 +79,7 @@
     <ClInclude Include="src\utils\string.h" />
     <ClInclude Include="src\utils\utils.h" />
     <ClInclude Include="src\graphics\uiitem\uiimage.h" />
+    <ClInclude Include="src\graphics\uiitem\uiprogressbar.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\graphics\shaders\renderer2.fs" />
