Bug fixes and joystick

--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -48,6 +48,7 @@
     <ClInclude Include="src\graphics\uiitem\uibutton.h" />
     <ClInclude Include="src\graphics\uiitem\uiimage.h" />
     <ClInclude Include="src\graphics\uiitem\uiitem.h" />
+    <ClInclude Include="src\graphics\uiitem\uijoystick.h" />
     <ClInclude Include="src\graphics\uiitem\uilabel.h" />
     <ClInclude Include="src\graphics\uiitem\uiprogressbar.h" />
     <ClInclude Include="src\maths\mat4.h" />
@@ -96,6 +97,7 @@
     <ClCompile Include="src\graphics\uiitem\uibutton.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiimage.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiitem.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uijoystick.cpp" />
     <ClCompile Include="src\graphics\uiitem\uilabel.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiprogressbar.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
