--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -51,6 +51,7 @@
     <ClInclude Include="src\graphics\uiitem\uijoystick.h" />
     <ClInclude Include="src\graphics\uiitem\uilabel.h" />
     <ClInclude Include="src\graphics\uiitem\uiprogressbar.h" />
+    <ClInclude Include="src\graphics\uiitem\uislider.h" />
     <ClInclude Include="src\maths\mat4.h" />
     <ClInclude Include="src\maths\math.h" />
     <ClInclude Include="src\maths\mathcommon.h" />
@@ -100,6 +101,7 @@
     <ClCompile Include="src\graphics\uiitem\uijoystick.cpp" />
     <ClCompile Include="src\graphics\uiitem\uilabel.cpp" />
     <ClCompile Include="src\graphics\uiitem\uiprogressbar.cpp" />
+    <ClCompile Include="src\graphics\uiitem\uislider.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
     <ClCompile Include="src\maths\vec2.cpp" />
     <ClCompile Include="src\maths\vec3.cpp" />
