--- a/Sandbox/Sandbox.Packaging/AndroidManifest.xml
+++ b/Sandbox/Sandbox.Packaging/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19"/>
-
+  <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"></uses-permission>
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
     <application android:label="@string/app_name" 
                  android:hasCode="false"
