--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="src\graphics\shaders\shader.h" />
     <ClInclude Include="src\graphics\buffers\vertexbuffer.h" />
     <ClInclude Include="src\graphics\font\font.h" />
+    <ClInclude Include="src\graphics\texture\framebuffer.h" />
     <ClInclude Include="src\graphics\texture\texture.h" />
     <ClInclude Include="src\graphics\uiitem\uibutton.h" />
     <ClInclude Include="src\graphics\uiitem\uiimage.h" />
@@ -93,6 +94,7 @@
     <ClCompile Include="src\graphics\font\fontatlas.cpp" />
     <ClCompile Include="src\graphics\font\fontmanager.cpp" />
     <ClCompile Include="src\graphics\shaders\shaderfactory.cpp" />
+    <ClCompile Include="src\graphics\texture\framebuffer.cpp" />
     <ClCompile Include="src\graphics\texture\texture.cpp" />
     <ClCompile Include="src\graphics\texture\texture2d.cpp" />
     <ClCompile Include="src\graphics\uiitem\uibutton.cpp" />
